# cg

./: .gitignore  CMakeLists.txt  ROADMAP  visualization.qbs
examples/: CMakeLists.txt
examples/algorithms/: CMakeLists.txt  diameter.cpp  simplify.cpp
examples/convex_hull/: CMakeLists.txt  andrews.cpp  convex_hull.cpp  dynamic_convex_hull.cpp  graham_hull.cpp
examples/operations/: CMakeLists.txt  contour_contains_point.cpp  rectangle_intersects_segment.cpp  segment_intersects_rectangle.cpp  segment_intersects_segment.cpp  segment_intersects_triangle.cpp  triangle_contains_point.cpp
examples/triangulation/: CMakeLists.txt  delaunay.cpp
examples/viewer/: viewer.cpp
examples/visibility/: CMakeLists.txt  minkowski.cpp  visibility.cpp
include/misc/: file_generator.h  performance_profiler.h  performanceprofiler.h  random_utils.h
include/visualization/: client_data_accumulator.h  client_data_accumulator_impl.h  drawer_impl.h  mouse_event_handler_impl.h  navigator.h  navigator_impl.h  viewer.h  viewer_adapter.h  visualization.h
src/: CMakeLists.txt  main_window.cpp  stdafx.h  viewer_widget.cpp  viewer_widget.h
src/visualization/: draw_util.cpp  draw_util.h  drawer_impl.cpp  drawer_impl.h  interactive_viewer.cpp  main_window.cpp  main_window.h  main_window_impl.h  viewer.h  viewer_adapter.h  viewer_widget.h  viewer_widget_impl.h  visualization.h
tests/: CMakeLists.txt  contains.cpp  convex_hull.cpp  delaunay.cpp  diameter.cpp  dynamic_convex_hull.cpp  has_intersection.cpp  intersection.cpp  minkowski.cpp  orientation.cpp  point_with_contour.cpp  random_utils.h  segment_intersection.cpp  simplify.cpp
(+43 files in other folders)
